--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,5 @@ script:
   - cask exec ert-runner
 notifications:
   email: false
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -f coverage-final.json
